# mobilis

./: README.md  firebase.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.history/contracts/Mobilis/src/: lib_20260621013045.rs
.history/mobilis-frontend/: .env_20260620234446
.history/mobilis-frontend/src/: App_20260620234726.tsx  App_20260620234728.tsx  App_20260624180809.tsx  App_20260624180811.tsx  firebase_20260620234325.ts  firebase_20260620234459.ts  index_20260621005750.css
.history/mobilis-frontend/src/components/: BottomNav_20260624180927.tsx  Dashboard_20260620234721.tsx  Dashboard_20260621000143.tsx  Dashboard_20260621000214.tsx  Dashboard_20260621000217.tsx  Dashboard_20260621000951.tsx  Dashboard_20260621001640.tsx  Dashboard_20260621004007.tsx  Dashboard_20260621004008.tsx  Dashboard_20260621004041.tsx  Dashboard_20260621004508.tsx  Dashboard_20260621011243.tsx  Dashboard_20260621012212.tsx  Dashboard_20260621012509.tsx  Dashboard_20260621012813.tsx  Dashboard_20260621012834.tsx  Dashboard_20260621012843.tsx  Dashboard_20260621013117.tsx  Dashboard_20260624180829.tsx  Dashboard_20260624181547.tsx  Dashboard_20260624181555.tsx  Dashboard_20260624182830.tsx  Dashboard_20260624212027.tsx  Dashboard_20260624230104.tsx  (+34 more)
contracts/Mobilis/: Cargo.toml
mobilis-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
mobilis-frontend/src/: App.tsx  firebase.ts
mobilis-frontend/src/components/: Dashboard.tsx  Landing.tsx  Signup.tsx
mobilis-frontend/src/context/: AuthContext.tsx
(+19 files in other folders)
